# DSIP

./: .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yml  credentials.env  dump.rdb  package-lock.json  package.json  pyproject.toml
.github/: FUNDING.yml
AccessTests/: Database_Access.ipynb
DSIP/: README.md  package-lock.json  package.json
DSIP/.husky/: commit-msg
api/admin/: admin.py
api/forum/: forum.py
api/moderation/: moderation.py
api/posts/: posts.py
api/sort/: sorting.py
api/users/: users.py
backend/: Dockerfile  change_stream_listener.py  db.sqlite3  requirements.txt
backend/DSIP/: apps.py
backend/backend/: asgi.py  consumers.py  settings.py  urls.py
backend/backend/DSIP/: apps.py  models.py  views.py
backend/backend/DSIP/migrations/: 0001_initial.py  0002_delete_site_delete_user.py
backend/backend/api/admin/: admin.py
backend/backend/api/moderation/: moderation.py
backend/backend/api/posts/: posts.py
backend/backend/db_access/: db_access.py
backend/backend/sentiment_model/: SentimentAnalysis.py
db_access/: db_access.py
dsip/: .env  .pre-commit-config.yaml  README.md  commitlint.config.js  docker-compose-prod.yml  docker-compose.yml
dsip/backend/: requirements.txt
dsip/backend/config/: settings.py
dsip/frontend/: package.json
dsip/frontend/public/: index.html  manifest.json
dsip/frontend/src/: main.js
frontend/: .env.development  .gitignore  Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.vue  main.js  style.css
frontend/src/assets/primevue/: badge.css  blockui.css  card.css  confirmdialog.css  dataview.css  fieldset.css  inplace.css  inputotp.css  inputtext.css  knob.css  listbox.css  menu.css  orderlist.css  panel.css  picklist.css  rating.css  ripple.css  splitter.css  tag.css  toolbar.css
frontend/src/auth/: AuthService.js  SetSession.js
frontend/src/components/: BaseInput.vue  Comment.vue  CreatePost.vue  CreatePostModal.vue  LandingNav.vue  LoginComponent.vue  PostRead.vue  ProfileNav.vue  easySponsor.vue
frontend/src/components/Admin/: AdminAsideInformation.vue
frontend/src/functions/: HelperFunctions.js
frontend/src/router/: index.js
frontend/src/stores/: session.js  user.js
frontend/src/views/: LandingPageView.vue  LogIn.vue  LogInView.vue  PostView.vue  ProfileView.vue  SV-DashboardView.vue  callback-page.vue
model/: sentiment-model.ipynb
sentiment_model/: SentimentAnalysis.py
(+10 files in other folders)
