[tool.poetry]
name = "dsip-itp"
version = "0.1.0"
description = ""
authors = ["Lorenz191 <144610453+Lorenz191@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
pre-commit = "^3.8.0"
djangorestframework = "^3.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
