[tool.poetry]
name = "dsip-itp"
version = "0.1.0"
description = ""
authors = ["Lorenz191 <144610453+Lorenz191@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
pre-commit = "^3.8.0"
djangorestframework = "^3.15.2"
torch = "^2.4.1"
transformers = "^4.45.1"
german = "^0.1.0"
sentiment = "^0.0.1"
germansentiment = "^1.1.0"
pandas = "^2.2.3"
numpy = "^2.1.1"
matplotlib = "^3.9.2"
mysql-connector-python = "^9.1.0"
python-dotenv = "^1.0.1"
pillow = "^11.0.0"
django-environ = "^0.11.2"
pymongo = "^4.10.1"
certifi = "^2024.8.30"
oauth = "^1.0.1"
authlib = "^1.3.2"
djangorestframework-jwt = "^1.11.0"
python-jose = "^3.3.0"
cryptography = "^44.0.0"
django-cors-headers = "^4.6.0"
channels = "^4.2.0"
channels-redis = "^4.2.1"
uvicorn = "^0.33.0"
wsproto = "^1.2.0"
websockets = "^14.1"
daphne = "^4.1.2"
pymemcache = "^4.0.0"
dnspython = "^2.7.0"
django-sslserver = "^0.22"
openai = "^1.59.6"
goslate = "^1.5.4"
deep-translator = "^1.11.4"
deepl = "^1.20.0"
django-redis = "^5.4.0"
redis = "^5.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
